# MOBADemo

./: README.md  build_proto.bat
NavMesh/: CAIBakedNavmesh.navmesh  srv_CAIBakedNavmesh.navmesh
Protocol/proto/: define.proto  room.proto  testProto.proto
Server/: NoahFrame.sln
Server/Dependencies/concurrentqueue/: README.md
Server/NFComm/NFMessageDefine/: NFDefine.cs  NFDefine.pb.cc  NFDefine.pb.h  NFDefine.proto  NFMsgPreGame.cs  NFMsgPreGame.pb.cc  NFMsgPreGame.pb.h  NFMsgPreGame.proto
Server/NFExamples/: CMakeLists.txt
Server/NFExamples/NFServer/: NFServer.h
Server/NFExamples/PumpkinBattlePlugin/: CMakeLists.txt  PumpkinBattleModule.cpp  PumpkinBattleModule.h  PumpkinBattlePlugin.cpp  PumpkinBattlePlugin.h  PumpkinBattlePlugin.vcxproj
Server/NFServer/NFGameServerPlugin/: NFGameServerPlugin.cpp  NFGameServerPlugin.vcxproj  NFGameServerPlugin.vcxproj.filters  NFPumpkinBattleModule.cpp  NFPumpkinBattleModule.h  PumpkinMobaBattleModule.h
Server/NFServer/NFProxyLogicPlugin/: NFProxyLogicModule.cpp  NFProxyLogicModule.h
Server/_Out/NFDataCfg/Debug/: Plugin.xml
Server/_Out/NFDataCfg/Ini/: Scene.xml
Unity/: .gitignore
Unity/Assets/: CAIBakedNavmesh.asset  MeshCompiler.asset  NavmeshBuild.asset
Unity/Assets/CAI/GlobalAssets/: CAINavEditorSettings.asset
Unity/Assets/Res/Prefabs/: Darius.prefab
Unity/Assets/Resources/: ServerConfig.xml
Unity/Assets/Scenes/: Battle.unity  Init.unity  MainMenu.unity  Map.unity
Unity/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Unity/UserSettings/: EditorUserSettings.asset
(+111 files in other folders)
